# MetaDecoder

./: .gitignore  README.md  fraggenescan (version 1.31 on MacOS)  hmmsearch (version 3.2.1 on Linux)  hmmsearch (version 3.2.1 on MacOS)  pyproject.toml  setup.py
benchmarks/: README.md
example/: README.md
metadecoder/: __init__.py  bam.py  bgzf.dylib  bgzf.py  c.py  coverage_model.py  detect_permission.py  dirichlet_process_gaussian_mixture.py  dirichlet_process_gaussian_mixture_gpu.py  dirichlet_process_gaussian_mixture_gpu_debug.py  fasta_utility.py  fraggenescan  isolation_forest.py  kmer_frequency_model.py  make_file.py  metadecoder_cluster.py  metadecoder_coverage.py  metadecoder_seed.py  plot.py  run_subprocess.py  sam_utility.py  seed_selection.py  set_permissions.py
utilities/: add_itol_annotations.py  extract_sequence_ids.py  generate annotated abundance matrix.py  generate_sequences.py  metagenome kegg.py  parse_amber_metrics.py  plot_benchmarks.py  reads_simulator.py  sort_clusters.py
