[build-system]
requires = ["setuptools >= 70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metadecoder"
version = "1.2.0"
description = "An algorithm for clustering metagenomic sequences."
requires-python = ">=3.9"
license = {text = "GPLv3"}
authors = [{name = "Liucongcong", email = "congcong_liu@icloud.com"}]
maintainers = [{name = "Liucongcong", email = "congcong_liu@icloud.com"}]
dependencies = [
    "numpy",
    "scipy>=1.11.0",
    "scikit-learn",
    "threadpoolctl"
]

[project.urls]
Homepage = "https://github.com/liu-congcong/metadecoder/"

[tool.setuptools.packages.find]
where = ["."]
include = ["metadecoder"]

[tool.setuptools.package-data]
metadecoder = ['LICENSE', 'markers.hmm', 'fraggenescan', 'hmmsearch', 'train/*']

[project.scripts]
metadecoder = "metadecoder:main"
